--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
       <header id="header">
         <div class="header__sitetitle">
           <div class="header__sitetitle__item item--1" data-sort="random">
-            <a href="#"> <img src="./assets/img/logo.svg" /> </a>
+            <a href="#"> <img src="./assets/img/logo2.svg" /> </a>
           </div>
         </div>
 
@@ -333,7 +333,7 @@
             class="mix mapping__item"
             data-project="9"
             data-link="./newflavorsoftea/1-1-cjh-c/"
-            data-dominantcolor-hex="#ffffff"
+            data-dominantcolor-hex="#ADD8E6"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -375,7 +375,7 @@
             class="mix mapping__item"
             data-project="9"
             data-link="./newflavorsoftea/1-1-cjh-c/"
-            data-dominantcolor-hex="#ffffff"
+            data-dominantcolor-hex="#ADD8E6"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -417,7 +417,7 @@
             class="mix mapping__item"
             data-project="9"
             data-link="./newflavorsoftea/1-1-cjh-c/"
-            data-dominantcolor-hex="#ffffff"
+            data-dominantcolor-hex="#ADD8E6"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -459,7 +459,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#ffffff"
+            data-dominantcolor-hex="#ADD8E6"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -501,7 +501,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#ffffff"
+            data-dominantcolor-hex="#ADD8E6"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -543,7 +543,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#ffffff"
+            data-dominantcolor-hex="#ADD8E6"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -585,7 +585,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#ffffff"
+            data-dominantcolor-hex="#ADD8E6"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -627,7 +627,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#ffffff"
+            data-dominantcolor-hex="#ADD8E6"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -669,7 +669,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#ffffff"
+            data-dominantcolor-hex="#ADD8E6"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -711,7 +711,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#ffffff"
+            data-dominantcolor-hex="#ADD8E6"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -753,7 +753,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#ffffff"
+            data-dominantcolor-hex="#ADD8E6"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -795,7 +795,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#ffffff"
+            data-dominantcolor-hex="#ADD8E6"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -837,7 +837,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#ffffff"
+            data-dominantcolor-hex="#ADD8E6"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -879,7 +879,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#ffffff"
+            data-dominantcolor-hex="#ADD8E6"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -921,7 +921,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#ffffff"
+            data-dominantcolor-hex="#ADD8E6"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -963,7 +963,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#ffffff"
+            data-dominantcolor-hex="#ADD8E6"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1005,7 +1005,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#ffffff"
+            data-dominantcolor-hex="#ADD8E6"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1047,7 +1047,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#ffffff"
+            data-dominantcolor-hex="#ADD8E6"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1089,7 +1089,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#ffffff"
+            data-dominantcolor-hex="#ADD8E6"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1131,7 +1131,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#ffffff"
+            data-dominantcolor-hex="#ADD8E6"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1173,7 +1173,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#ffffff"
+            data-dominantcolor-hex="#ADD8E6"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1215,7 +1215,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#ffffff"
+            data-dominantcolor-hex="#ADD8E6"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1257,7 +1257,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#ffffff"
+            data-dominantcolor-hex="#ADD8E6"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1299,7 +1299,7 @@
             class="mix mapping__item"
             data-project="7"
             data-link="./newflavorsoftea/1-1-cjh-t/"
-            data-dominantcolor-hex="#fafafa"
+            data-dominantcolor-hex="#ADD8E6"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1341,7 +1341,7 @@
             class="mix mapping__item"
             data-project="7"
             data-link="./newflavorsoftea/1-1-cjh-t/"
-            data-dominantcolor-hex="#ffffff"
+            data-dominantcolor-hex="#ADD8E6"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1385,7 +1385,7 @@
             class="mix mapping__item"
             data-project="6"
             data-link="./newflavorsoftea/1-1-hwk-c/"
-            data-dominantcolor-hex="#dfdfdf"
+            data-dominantcolor-hex="#D5D3D2"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1427,7 +1427,7 @@
             class="mix mapping__item"
             data-project="5"
             data-link="./newflavorsoftea/1-1-hwk-p/"
-            data-dominantcolor-hex="#ffffff"
+            data-dominantcolor-hex="#D5D3D2"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1469,7 +1469,7 @@
             class="mix mapping__item"
             data-project="5"
             data-link="./newflavorsoftea/1-1-hwk-p/"
-            data-dominantcolor-hex="#ffffff"
+            data-dominantcolor-hex="#D5D3D2"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1511,7 +1511,7 @@
             class="mix mapping__item"
             data-project="5"
             data-link="./newflavorsoftea/1-1-hwk-p/"
-            data-dominantcolor-hex="#ffffff"
+            data-dominantcolor-hex="#D5D3D2"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1553,7 +1553,7 @@
             class="mix mapping__item"
             data-project="4"
             data-link="./newflavorsoftea/1-1-hwk-t/"
-            data-dominantcolor-hex="#faddff"
+            data-dominantcolor-hex="#D5D3D2"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1594,7 +1594,7 @@
             class="mix mapping__item"
             data-project="4"
             data-link="./newflavorsoftea/1-1-hwk-t/"
-            data-dominantcolor-hex="#ffffff"
+            data-dominantcolor-hex="#D5D3D2"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1636,7 +1636,7 @@
             class="mix mapping__item"
             data-project="4"
             data-link="./newflavorsoftea/1-1-hwk-t/"
-            data-dominantcolor-hex="#ffffff"
+            data-dominantcolor-hex="#D5D3D2"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1679,7 +1679,7 @@
             class="mix mapping__item"
             data-project="3"
             data-link="./newflavorsoftea/1-1-kjh-c/"
-            data-dominantcolor-hex="#ffffff"
+            data-dominantcolor-hex="#D3C6A0"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1721,7 +1721,7 @@
             class="mix mapping__item"
             data-project="3"
             data-link="./newflavorsoftea/1-1-kjh-c/"
-            data-dominantcolor-hex="#ffffff"
+            data-dominantcolor-hex="#D3C6A0"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1762,7 +1762,7 @@
             class="mix mapping__item"
             data-project="3"
             data-link="./newflavorsoftea/1-1-kjh-c/"
-            data-dominantcolor-hex="#ffffff"
+            data-dominantcolor-hex="#D3C6A0"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1803,7 +1803,7 @@
             class="mix mapping__item"
             data-project="3"
             data-link="./newflavorsoftea/1-1-kjh-c/"
-            data-dominantcolor-hex="#ffffff"
+            data-dominantcolor-hex="#D3C6A0"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1845,7 +1845,7 @@
             class="mix mapping__item"
             data-project="2"
             data-link="./newflavorsoftea/1-1-kjh-p/"
-            data-dominantcolor-hex="#ffffff"
+            data-dominantcolor-hex="#D3C6A0"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1887,7 +1887,7 @@
             class="mix mapping__item"
             data-project="2"
             data-link="./newflavorsoftea/1-1-kjh-p/"
-            data-dominantcolor-hex="#ffffff"
+            data-dominantcolor-hex="#D3C6A0"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1929,7 +1929,7 @@
             class="mix mapping__item"
             data-project="2"
             data-link="./newflavorsoftea/1-1-kjh-p/"
-            data-dominantcolor-hex="#ffffff"
+            data-dominantcolor-hex="#D3C6A0"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1971,7 +1971,7 @@
             class="mix mapping__item"
             data-project="2"
             data-link="./newflavorsoftea/1-1-kjh-p/"
-            data-dominantcolor-hex="#ffffff"
+            data-dominantcolor-hex="#D3C6A0"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -2013,7 +2013,7 @@
             class="mix mapping__item"
             data-project="2"
             data-link="./newflavorsoftea/1-1-kjh-p/"
-            data-dominantcolor-hex="#ffffff"
+            data-dominantcolor-hex="#D3C6A0"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -2097,7 +2097,7 @@
             class="mix mapping__item"
             data-project="1"
             data-link="./newflavorsoftea/1-1-kjh-t/"
-            data-dominantcolor-hex="#ffffff"
+            data-dominantcolor-hex="#D3C6A0"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -2139,7 +2139,7 @@
             class="mix mapping__item"
             data-project="1"
             data-link="./newflavorsoftea/1-1-kjh-t/"
-            data-dominantcolor-hex="#ffffff"
+            data-dominantcolor-hex="#D3C6A0"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -2181,7 +2181,7 @@
             class="mix mapping__item"
             data-project="1"
             data-link="./newflavorsoftea/1-1-kjh-t/"
-            data-dominantcolor-hex="#ffffff"
+            data-dominantcolor-hex="#D3C6A0"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -2223,7 +2223,7 @@
             class="mix mapping__item"
             data-project="1"
             data-link="./newflavorsoftea/1-1-kjh-t/"
-            data-dominantcolor-hex="#ffffff"
+            data-dominantcolor-hex="#D3C6A0"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -2265,7 +2265,7 @@
             class="mix mapping__item"
             data-project="1"
             data-link="./newflavorsoftea/1-1-kjh-t/"
-            data-dominantcolor-hex="#ffffff"
+            data-dominantcolor-hex="#D3C6A0"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -2306,7 +2306,7 @@
             class="mix mapping__item"
             data-project="1"
             data-link="./newflavorsoftea/1-1-kjh-t/"
-            data-dominantcolor-hex="#ffffff"
+            data-dominantcolor-hex="#D3C6A0"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -2347,7 +2347,7 @@
             class="mix mapping__item"
             data-project="1"
             data-link="./newflavorsoftea/1-1-kjh-t/"
-            data-dominantcolor-hex="#ffffff"
+            data-dominantcolor-hex="#D3C6A0"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -2398,7 +2398,5 @@
     <script src="./assets/js/bundle.js"></script>
 
     <script src="./assets/js/main-functions.js"></script>
-
-   
   </body>
 </html>
