--- a/information/index.html
+++ b/information/index.html
@@ -150,7 +150,7 @@
         <div class="header__sitetitle">
           <div class="header__sitetitle__item item--1" data-sort="random">
             <a href="../" target="_self" rel="noopener noreferrer"
-              ><img src="../../assets/img/logo.svg"
+              ><img src="../../assets/img/logo2.svg"
             /></a>
           </div>
         </div>
@@ -293,9 +293,11 @@
             <p>
               시대기물연구소 〈파도〉는 전통의 깊은 토대 위에서 지금 이 시대의
               이야기를 담는 기물을 연구하고 제안합니다. 새로운 도구의 제안으로
-              사람들이 도구를 사용하는 행위에도 변화가 일어날 것입니다. 이러한
-              제안들은 처음에는 혼자서 두드리는 미약한 노이즈로 여겨질 수도
-              있습니다. 하지만 점차 사람들에게 전달되어 정확한 음을 가지는
+              사람들이 도구를 사용하는 행위에도 변화가 일어날 것입니다.
+            </p>
+            <p>
+              이러한 제안들은 처음에는 혼자서 두드리는 미약한 노이즈로 여겨질
+              수도 있습니다. 하지만 점차 사람들에게 전달되어 정확한 음을 가지는
               소리가 되고, 그 파장이 올바른 방향으로 나아가 우리의 생각을
               확장시키고 마침내 사물을 바라보는 관점을 바꿀 것입니다.
             </p>
