--- a/newflavorsoftea/1-1-kjh-c/index.html
+++ b/newflavorsoftea/1-1-kjh-c/index.html
@@ -149,7 +149,7 @@
       <header id="header">
         <div class="header__sitetitle">
           <div class="header__sitetitle__item item--1" data-sort="random">
-            <a href="../../"><img src="../../assets/img/logo.svg" /></a>
+            <a href="../../"><img src="../../assets/img/logo2.svg" /></a>
           </div>
         </div>
 
@@ -665,15 +665,7 @@
                   </span>
                 </div>
 
-                <div class="meta__wrapper">
-                  <span>
-                    <p>Size</p>
-                  </span>
-
-                  <span>
-                    <p>Variable Sizes</p>
-                  </span>
-                </div>
+                
 
                 <div class="meta__wrapper">
                   <span>
