--- a/newflavorsoftea/1-1-kjh-t/index.html
+++ b/newflavorsoftea/1-1-kjh-t/index.html
@@ -149,7 +149,7 @@
       <header id="header">
         <div class="header__sitetitle">
           <div class="header__sitetitle__item item--1" data-sort="random">
-            <a href="../../"><img src="../../assets/img/logo2.svg" /></a>
+            <a href="../../"><img src="../../assets/img/logo3.svg" /></a>
           </div>
         </div>
 
@@ -167,8 +167,7 @@
         <div id="swup" class="menu__wrapper">
           <div class="menu__item contact">
             <p>
-              시대기물연구소 〈파도〉
-              <br />
+              The Institute of Object 〈PADO〉 <br />
               <br />
               In Sansuhwa Teahouse
               <br />
@@ -247,7 +246,7 @@
             </a>
           </div>
 
-           <div class="header__menutoggle__lang language__item visible ko">
+          <div class="header__menutoggle__lang language__item visible ko">
             <span class="language--active">
               <a href="#" hreflang="ko"> </a>
             </span>
@@ -308,7 +307,7 @@
               <div
                 class="projecttoggle__item projecttoggle--information inactive"
               >
-                               Description
+                Description
               </div>
 
               <div class="projecttoggle__item projecttoggle--overview inactive">
@@ -998,8 +997,6 @@
                     <p>For various purposes in the tea ceremony</p>
                   </span>
                 </div>
-
-                
 
                 <div class="meta__wrapper">
                   <span>
