--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -149,7 +149,7 @@
       <header id="header">
         <div class="header__sitetitle">
           <div class="header__sitetitle__item item--1" data-sort="random">
-            <a href="../" target="_self" rel="noopener noreferrer"><img src="../../assets/img/logo2.svg" /></a>
+            <a href="../" target="_self" rel="noopener noreferrer"><img src="../../assets/img/logo3.svg" /></a>
           </div>
         </div>
 
@@ -167,8 +167,7 @@
         <div id="swup" class="menu__wrapper" data-swup="0">
           <div class="menu__item contact">
             <p>
-              시대기물연구소 〈파도〉
-              <br />
+              The Institute of Object 〈PADO〉              <br />
               <br />
               In Sansuhwa Teahouse
               <br />
