--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
       <header id="header">
         <div class="header__sitetitle">
           <div class="header__sitetitle__item item--1" data-sort="random">
-            <a href="#"> <img src="./assets/img/logo2.svg" /> </a>
+            <a href="#"> <img src="./assets/img/logo3.svg" /> </a>
           </div>
         </div>
 
@@ -190,8 +190,7 @@
         <div id="swup" class="menu__wrapper">
           <div class="menu__item contact">
             <p>
-              시대기물연구소 〈파도〉
-              <br />
+              The Institute of Object 〈PADO〉 <br />
               <br />
               In Sansuhwa Teahouse
               <br />
@@ -324,6 +323,28 @@
             </div>
           </div>
         </div>
+
+        <!-- <div id="information">
+          <div class="information__item information__text">
+            <p>
+              시대기물연구소 〈파도〉는 전통의 깊은 토대 위에서 지금 이 시대의
+              이야기를 담는 기물을 연구하고 제안합니다. 새로운 도구의 제안으로
+              사람들이 도구를 사용하는 행위에도 변화가 일어날 것입니다.
+            </p>
+            <p>
+              이러한 제안들은 처음에는 혼자서 두드리는 미약한 노이즈로 여겨질
+              수도 있습니다. 하지만 점차 사람들에게 전달되어 정확한 음을 가지는
+              소리가 되고, 그 파장이 올바른 방향으로 나아가 우리의 생각을
+              확장시키고 마침내 사물을 바라보는 관점을 바꿀 것입니다.
+            </p>
+            <p>
+              옛 전통과 실생활에 대한 깊은 사유를 기물에 담아내는 작가님들과
+              함께 연구하며, 애정을 담아 기꺼이 우리의 이야기를 듣고 경험하는
+              분들이 일으켜주시는 바람으로 우리는 멀리 수 천 수 만 킬로미터를
+              나아갈 수 있는 파도가 되고자 합니다.
+            </p>
+          </div>
+        </div> -->
 
         <!-- contents -->
         <div id="mapping">
