--- a/information/index.html
+++ b/information/index.html
@@ -150,7 +150,7 @@
         <div class="header__sitetitle">
           <div class="header__sitetitle__item item--1" data-sort="random">
             <a href="../" target="_self" rel="noopener noreferrer"
-              ><img src="../../assets/img/logo2.svg"
+              ><img src="../../assets/img/logo3.svg"
             /></a>
           </div>
         </div>
@@ -169,8 +169,7 @@
         <div id="swup" class="menu__wrapper">
           <div class="menu__item contact">
             <p>
-              시대기물연구소 〈파도〉
-              <br />
+              The Institute of Object 〈PADO〉              <br />
               <br />
               In Sansuhwa Teahouse
               <br />
