--- a/index.html
+++ b/index.html
@@ -21,24 +21,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
     <!-- favicon -->
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="./assets/favicon/apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./assets/favicon/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="./assets/favicon/favicon-16x16.png"
-    />
-    <link rel="manifest" href="./assets/favicon/site.webmanifest" />
+    <link rel="icon" type="image/png" href="/favicon-48x48.png" sizes="48x48" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="PADO" />
+    <link rel="manifest" href="/site.webmanifest" />
     <link
       rel="mask-icon"
       href="./assets/favicon/safari-pinned-tab.svg"
@@ -172,7 +160,7 @@
       <header id="header">
         <div class="header__sitetitle">
           <div class="header__sitetitle__item item--1" data-sort="random">
-            <a href="#"> <img src="./assets/img/logo3.svg" /> </a>
+            <a href="#"> <img src="./assets/img/logo2.svg" /> </a>
           </div>
         </div>
 
