--- a/legal-notice/index.html
+++ b/legal-notice/index.html
@@ -8,10 +8,16 @@
     />
 
     <title>시대기물연구소 파도 • Notice</title>
-    <meta name="description" content="시대기물연구소 〈파도〉는 전통의 깊은 토대 위에서 지금 이 시대의 이야기를 담는 기물을 연구하고 제안합니다." />
+    <meta
+      name="description"
+      content="시대기물연구소 〈파도〉는 전통의 깊은 토대 위에서 지금 이 시대의 이야기를 담는 기물을 연구하고 제안합니다."
+    />
 
     <meta itemprop="name" content="PADO" />
-    <meta name="keywords" content="PADO, 시대기물연구소, 파도, 새로운 기물, 기물, 다기, 다구, 차도구" />
+    <meta
+      name="keywords"
+      content="PADO, 시대기물연구소, 파도, 새로운 기물, 기물, 다기, 다구, 차도구"
+    />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
     <!-- favicon -->
@@ -46,14 +52,20 @@
     <meta property="og:locale" content="ko_KR" />
     <meta property="og:site_name" content="PADO" />
     <meta property="og:title" content="PADO" />
-    <meta property="og:description" content="시대기물연구소 〈파도〉는 전통의 깊은 토대 위에서 지금 이 시대의 이야기를 담는 기물을 연구하고 제안합니다." />
+    <meta
+      property="og:description"
+      content="시대기물연구소 〈파도〉는 전통의 깊은 토대 위에서 지금 이 시대의 이야기를 담는 기물을 연구하고 제안합니다."
+    />
     <meta property="og:image" content="../assets/favicon/og-image.jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="PADO" />
-    <meta name="twitter:description" content="시대기물연구소 〈파도〉는 전통의 깊은 토대 위에서 지금 이 시대의 이야기를 담는 기물을 연구하고 제안합니다." />
+    <meta
+      name="twitter:description"
+      content="시대기물연구소 〈파도〉는 전통의 깊은 토대 위에서 지금 이 시대의 이야기를 담는 기물을 연구하고 제안합니다."
+    />
     <meta name="twitter:image" content="../assets/favicon/og-image.jpg" />
 
     <!-- web-app-image -->
@@ -137,7 +149,9 @@
       <header id="header">
         <div class="header__sitetitle">
           <div class="header__sitetitle__item item--1" data-sort="random">
-            <a href="../" target="_self" rel="noopener noreferrer"><img src="../../assets/img/logo2.svg" /></a>
+            <a href="../" target="_self" rel="noopener noreferrer"
+              ><img src="../../assets/img/logo2.svg"
+            /></a>
           </div>
         </div>
 
@@ -155,7 +169,7 @@
         <div id="swup" class="menu__wrapper" data-swup="0">
           <div class="menu__item contact">
             <p>
-              The Institute of Object 〈PADO〉              <br />
+              The Institute of Object 〈PADO〉 <br />
               <br />
               In Sansuhwa Teahouse
               <br />
@@ -172,7 +186,7 @@
             </p>
           </div>
 
-             <div class="menu__item projectlist">
+          <div class="menu__item projectlist">
             <a href="../newflavorsoftea/1-1-cjh-c/" class="projectlist__item">
               <span class="item--projectnumber">03</span>
               <span class="item--projectname">
@@ -271,35 +285,25 @@
 
         <div id="general" class="legal-notice">
           <div class="general__wrapper" style="height: 80vh; opacity: 1">
-            <p>
-              파도, PADO / 21-14, Hannam-daero 20gil,<br />Yongsan-gu, Seoul
-              <br />
-
-              +82 2 749 3138
-            </p>
-
             <h1>Copyright</h1>
             <p>
-              웹사이트 내부 콘텐츠의 무단 복사, 사용 또는 변경은 허용되지
-              않습니다. 모든 텍스트, 이미지 또는 멀티미디어 데이터는 저작권법 및
-              지적 재산권 보호법의 적용을 받습니다. 이에 대한 추가 사용을
-              위해서는 권리 소유자 또는 아티스트의 명시적인 허가가 필요합니다.
+              이 웹사이트의 콘텐츠를 무단으로 복사, 사용 또는 수정하는 것은
+              금지되어 있습니다. 모든 텍스트, 이미지 또는 멀티미디어 데이터에는
+              저작권 및 지적 재산권 보호법이 적용됩니다. 이에 대한 추가 사용을
+              위해서는 저작권 소유자, 갤러리 또는 아티스트의 명시적인 허가가
+              필요합니다.
             </p>
 
             <p>
-              Unauthorized copying, use or alteration of the content of the
-              website is not permitted. All texts, pictures or multimedia data
-              are subject to copyright laws and laws for the protection of
-              intellectual property. Further use requires the explicit
-              permission by the holder of rights, the gallery or the artists.
+              Unauthorised copying, using or modifying the content of this website is prohibited. Copyright and laws for the protection of intellectual property apply to all texts, images or multimedia data. Any further use requires the express permission of the copyright holder, the gallery or the artists.
             </p>
 
             <h1>External links</h1>
             <p>
-              〈PADO〉는 웹사이트 외부에 링크된 외부 웹사이트의 콘텐츠에 대해
+              〈PADO〉는 웹사이트 외부에 링크된 외부 웹사이트의 컨텐츠에 대해
               책임을 지지 않으며 링크된 사이트의 현재 또는 미래의 디자인에
               어떠한 영향도 미치지 않습니다. 따라서 〈PADO〉는 해당 사이트에
-              대한 링크가 설정된 이후에 이루어진 콘텐츠의 변경에 대해 책임을
+              대한 링크가 설정된 이후에 이루어진 컨텐츠의 변경에 대해 책임을
               지지 않습니다.
             </p>
             <p>
